<resources>
    <string name="app_name">Prototype</string>
    <string name="logo">Logo</string>
    <string name="welcome">Bienvenido</string>
    <string name="Ingresar">Ingrese para continuar</string>
    <string name="signUp">¿No tienes cuenta? Regístrate</string>
    <string name="sign_in">Ingresar</string>
    <string name="continuar">O continua con</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="close_sesion">Cerrar Sesión</string>
    <string name="create_model">Crear Nuevo Modelo</string>
    <string name="model_name">Nombre del modelo</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="create">Crear modelo</string>
    <string name="my_model">Mis modelos</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="complete_fields">Llena los siguientes campos</string>
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="role">Selecciona tu rol</string>
    <string name="sign_up">Registrar\n¿</string>
    <string name="already_have_account">¿Tienes una cuenta?</string>
    <string name="last_name">Primer apellido</string>
    <string name="second_name_optional">Segundo apellido\n</string>
    <string name="star_symbol">★</string>
    <string name="select_image_and_create">Seleccionar imagen y crear</string>
    <string name="image_preview">Vista previa de imagen</string>
    <string name="back">Atrás</string>
    <string name="reset_view">Restablecer vista</string>
    <string name="wireframe">Wireframe</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="download">Descargar</string>
    <string name="buy">Comprar</string>
    <string name="processing">Procesando...</string>
</resources>